# book-shop

./: app.py  config.py  database.py  dependencies.py  pyproject.toml
controllers/: booking_controller.py  product_controller.py  user_controller.py
data_access_objects/: booking_dao.py  product_dao.py  user_dao.py
models/: book_store_model.py  booking_model.py  booking_schema.py  booking_status_model.py  product_model.py  product_schema.py  role_model.py  user_model.py  user_schema.py
openapi/: swagger.yml
routes/: booking_route.py  product_route.py  user_route.py
schemas/: booking_schema.py  product_schema.py  user_schema.py
services/: booking_service.py  product_service.py  user_service.py
