[tool.poetry]
name = "book-shop"
version = "0.1.0"
description = ""
authors = ["vlad2102 <matysiukv@gmail.com>"]
readme = "README.md"
packages = [{include = "book_shop"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.2"
flask-marshmallow = "^0.14.0"
connexion = "^2.14.2"
sqlalchemy = "^2.0.1"
flask-sqlalchemy = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
